# hodor_python

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: release.yml
notebooks/: download_data.ipynb  usage_examples.ipynb
src/hodor_python/: __init__.py  dataset.py
tests/: test_basic.py
