[project]
name = "hodor-python"
version = "0.1.0"
description = "Python API to access and download the HODOR data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "pangaeapy>=1.1.0",
    "requests>=2.32.5",
    "ruff>=0.12.10",
    "tqdm>=4.67.1",
]

[project.scripts]
hodor-python = "hodor_python:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
pangaeapy = { path = "../../../pangaeapy", editable = true }
